--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,33 @@
 {
-    "manifest_version": 3,
-    "name": "Canadian Product Alternatives",
-    "description": "Helps users find Canadian alternatives for products and learn about local businesses.",
-    "version": "1.0",
-    "permissions": [
-      "contextMenus",
-      "activeTab",
-      "scripting",
-      "storage"
-    ],
-    "icons": {
+  "manifest_version": 3,
+  "name": "Canadian Product Alternatives",
+  "description": "Helps users find Canadian alternatives for products and learn about local businesses.",
+  "version": "1.0",
+  "permissions": [
+    "contextMenus",
+    "activeTab",
+    "scripting",
+    "storage"
+  ],
+  "host_permissions": [
+    "https://world.openfoodfacts.org/*"
+  ],
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "action": {
+    "default_title": "Find Canadian Alternatives",
+    "default_popup": "popup.html",
+    "default_icon": {
       "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    },
-    "action": {
-      "default_title": "Find Canadian Alternatives",
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icon16.png",
-        "32": "icon32.png",
-        "48": "icon48.png"
-      }
-    },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "options_page": "options.html"
-  }
-  
+      "32": "icon32.png",
+      "48": "icon48.png"
+    }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "options_page": "options.html"
+}
